<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Fragment.About">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="#0E0000"
                android:backgroundTint="#020000"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/logo2" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#000000"
                android:paddingBottom="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/introhead"
                android:text="@string/intro1"
                android:textColor="#71EC3C"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/times"
                android:text="@string/intro2"
                android:textColor="#F8FAD903"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/times"
                android:text="@string/intro3"
                android:textColor="#F7D6BD1A"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:text="@string/space"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/times"
                android:text="@string/intro4"
                android:textColor="#F60247"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro5"
                android:textColor="#AE1255"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:text="@string/space"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/times"
                android:text="@string/intro6"
                android:textColor="#71EC3C"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/physiofit" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/plogo" />

            <LinearLayout
                android:id="@+id/lywhatsapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imwhatsapp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:duplicateParentState="false"
                    android:src="@drawable/whatsapp" />

                <TextView
                    android:id="@+id/tvwhatsapp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:fontFamily="@font/times"
                    android:gravity="center_vertical"
                    android:text="@string/whatsappnum"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyfacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imfacebook"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:duplicateParentState="false"
                    android:src="@drawable/facebook" />

                <TextView
                    android:id="@+id/tvfacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:fontFamily="@font/times"
                    android:gravity="center_vertical"
                    android:text="@string/facebook"
                    android:textColor="#000000"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyinstagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iminstagram"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:duplicateParentState="false"
                    android:src="@drawable/instagram" />

                <TextView
                    android:id="@+id/tvinstagram"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:fontFamily="@font/times"
                    android:gravity="center_vertical"
                    android:text="@string/facebook"
                    android:textColor="#000000"
                    android:textSize="20sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_margin="15dp"
                android:layout_marginTop="10dp"
                android:background="#050000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/times"


                    android:gravity="center"
                    android:text="@string/human_diet_and_nutrition_planning"
                    android:textColor="#F7000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/introb"
                    android:textColor="#020000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/times"


                    android:gravity="center"
                    android:text="My Profile: "
                    android:textColor="#F7000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/introb2"
                    android:textColor="#020000"/>

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/introb3"
                    android:textColor="#020000"

                    />

            </LinearLayout>
            <![CDATA[

















            />

            android:text="TextView" />





        ]]>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>